# files

./: meson.build  meson_options.txt
filechooser-portal/: FileChooserDialog.vala  Main.vala
